--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
     padding:0;
 }
 
+body 
+{
+    width:100%;
+    border:0;
+    margin:0;
+    padding:0;
+}
 
 .landing
 {
@@ -141,6 +148,7 @@ nav
     flex-direction: row;
     align-items: center;
     justify-content:center;
+    
 }
 
 .landing-description-container img 
@@ -217,11 +225,251 @@ transition:opacity 0.4s;
 .small-market-container 
 {
     width:100%;
-    height:100vh;
+    height:80vh;
     background:white;
     position:relative;
     display:flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+}
+
+
+.about-img
+{
+    width:30vw; 
+    height:25vw;
+}
+
+.market-container
+{
+    width:60vw;
+    height:100%;
+    position:relative;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.btc-holder
+{
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+}
+
+p2, p3 
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size:70px;
+    color:rgba(0, 0, 0, 0.795);
+    font-weight: 500;
+    margin:0px 20px;
+}
+
+.crypto 
+{
+    width:270px;
+    height:60px;
+    border:1px solid rgba(0, 0, 0, 0.349);
+    border-radius:50px;
+    position:relative;
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.crypto .currency
+{
+    width:40px;
+    height:40px;
+    position:absolute;
+    left:25px;
+}
+
+.crypto p 
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size:25px;
+    color:rgba(0, 0, 0, 0.795);
+    font-weight: 200;
+}
+
+.crypto .roll-down 
+{
+    width:30px;
+    height:30px;
+    position: absolute;
+    right: 25px;
+}
+
+.value 
+{
+    width:470px;
+    height:50px;
+    border:1px solid rgba(0, 0, 0, 0.493);
+    border-radius:50px;
+    padding:0px 50px;
+    font-size:30px;
+    color:black;
+    font-weight: 200;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top:25px;
+}
+
+.price-holder 
+{
+    background: rgb(143,18,101);
+    background: linear-gradient(90deg, rgba(143,18,101,1) 0%, rgba(41,37,155,1) 100%); 
+    width:300px;
+    height:60px;
+    border-radius:50px;
+    color:white;
+    font-size:30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 400;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    margin:30px 0px;
+}
+
+.continue 
+{
+    background: rgb(143,18,101);
+    background: linear-gradient(90deg, rgba(143,18,101,1) 0%, rgba(41,37,155,1) 100%); 
+    width:250px;
+    height:60px;
+    border:none;
+    border-radius:50px;
+    color:white;
+    font-size:30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 400;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    margin:30px 0px;
+    transition:opacity 0.4s;
+}
+
+.continue:hover 
+{
+    opacity:0.6;
+    transition:0.4s;
+    cursor: pointer;
+}
+
+p4 
+{
+    font-size:20px;
+    color:black;
+    letter-spacing: 2px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 300;
+}
+
+p4 a 
+{
+    color:black;
+
+}
+
+
+
+.wave-1 
+{
+    width:100%;
+    display:flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin:0;
+
+}
+
+.wave-1 img 
+{
+    margin:0;
+}
+
+.about-us 
+{
+    width:100%;
+    height:90vh;
+    position:relative;
+    display:flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    background: rgb(14,10,109);
+    background: linear-gradient(180deg, rgba(14,10,109,1) 0%, rgba(99,0,46,1) 100%); 
+}
+
+.text-about-us 
+{
+    width:50%;
+    height:100%;
+    position:relative;
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+
+
+}
+
+h2
+{
+    font-size:50px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 100;
+    color:rgba(255, 255, 255, 0.952);
+    text-align: left;
+    letter-spacing: 2px;
+
+}
+
+p5
+{
+    font-size:35px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 100;
+    color:rgba(255, 255, 255, 0.788);
+    text-align: left;
+    letter-spacing: 2px;
+    width:80%
+
+}
+
+.about-us img 
+{
+    width:30vw;
+    height:30vw;
+}
+
+.text-about-us button 
+{
+    width:300px;
+    padding:7px 30px;
+    color:white;
+    background:transparent;
+    border:2px solid white;
+    border-radius:50px;
+    font-size:35px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 300;
+    margin-top:80px;
+    transition:opacity 0.4s;
+}
+
+.text-about-us button:hover 
+{
+    opacity:0.7;
+    transition:0.4s;
+    cursor: pointer;
 }
