--- a/style.css
+++ b/style.css
@@ -473,3 +473,93 @@ p5
     transition:0.4s;
     cursor: pointer;
 }
+
+
+.help 
+{
+    width:100%;
+    height:fit-content;
+    background:white;
+    position:relative;
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+
+}
+
+h3 
+{
+    font-size:70px;
+    font-weight: 100;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-left:100px;
+    color:#080558;
+
+}
+
+.card-container 
+{
+    width:100%;
+    height:fit-content;
+    margin-top:50px;
+    position: relative;
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.card 
+{
+
+    background: rgb(133,97,218);
+    background: linear-gradient(180deg, rgba(133,97,218,1) 0%, rgba(205,63,63,1) 100%); 
+    width:330px;
+    height:fit-content;
+    margin:30px 80px;
+    border-radius:30px;
+    position: relative;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding:60px 0px;
+}
+
+p6 
+{
+    font-size:25px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    text-align: left;
+    letter-spacing: 1px;
+    color:white;
+    width:80%;
+}
+
+.card button 
+{
+    
+  
+    font-size:25px;
+    color:white;
+    background:rgba(255, 255, 255, 0.493);
+    border:none;
+    border-radius:50px;
+    padding:10px 20px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    margin-top:40px;
+    transition:opacity 0.4s;
+}
+
+.card button:hover 
+{
+    opacity:0.7;
+    cursor: pointer;
+    transition:0.4s;
+}
