--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body
     border:0;
     margin:0;
     padding:0;
+    overflow-x: hidden;
 }
 
 .landing
@@ -20,9 +21,99 @@ body
     position: relative;
     background: rgb(2,0,36);
     background: linear-gradient(135deg, rgba(2,0,36,1) 0%, rgba(17,0,100,1) 21%, rgba(25,7,118,1) 41%, rgba(45,25,143,1) 62%, rgba(201,57,104,1) 100%);
-
-
+    transition:0.7s;
+    
 }
+
+
+
+.hamburger-menu
+{
+    width:450px;
+    height:100vh;
+    position:absolute;
+    background: rgb(14,10,109);
+    background: linear-gradient(90deg, rgba(14,10,109,1) 0%, rgba(6,4,71,1) 100%);
+    left:0;
+    z-index:666;
+    bottom:0;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    transition:0.7s;
+    transform:translateX(-450px);
+}
+
+.hamburger-open 
+{
+    transform:translateX(0px);
+    transition:0.7s;
+}
+
+.landing-open 
+{
+    transform:translateX(450px);
+    transition:0.7s;
+}
+.profile 
+{
+    width:fit-content;
+    height:60px;
+    margin-top:50px;
+    position:relative;
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.profile img 
+{
+    width:40px;
+    height:40px;
+    border:1px solid white;
+    border-radius:100%;
+    padding:10px;
+    margin:0px 20px;
+}
+
+.nickname 
+{
+    font-size:25px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    color:rgba(255, 255, 255, 0.705);
+    letter-spacing: 2px;
+}
+
+.hamburger-link 
+{
+    font-size:25px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    color:rgba(255, 255, 255, 0.705);
+    letter-spacing: 2px;
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.hamburger-link a 
+{
+    text-decoration: none;
+    color:white;
+}
+.ham-link-img 
+{
+    width:50px;
+    height:50px;
+    margin:40px 20px;
+}
+
+
+
 
 .header-logo
 {
@@ -61,23 +152,44 @@ header
 {
     width:60px;
     height:3px;
-    background:rgba(255, 255, 255, 0.479);
+    background:rgb(255, 255, 255);
     border-radius:20px;
+    position:absolute;
 }
 
 .first-span 
 {
-    transform:translateY(-15px);
+    transform:translateY(-20px);
+    transition:0.7s;
 }
 
 .second-span 
 {
     transform:translateY(0px);
+    transition:0.7s;
 }
+
 
 .third-span 
 {
-    transform:translateY(15px);
+    transform:translateY(20px);
+    transition:0.7s;
+}
+
+.first-open 
+{
+    transform:rotate(45deg);
+    transition:0.7s;
+}
+.second-open 
+{
+    opacity:0;
+    transition:0.7s;
+}
+.third-open 
+{
+    transform:rotate(-45deg);
+    transition:0.7s;
 }
 
 nav 
@@ -679,32 +791,27 @@ padding:50px 0;
 
 }
 
-.sign-up-footer 
+.sign-up-footer, .sign-in-footer 
 {
     color:white;
     border:2px solid white;
     background:rgba(255, 255, 255, 0.39);
     border-radius:50px;
     font-size:35px;
-    padding:8px 20px;
+    padding:8px 30px;
     margin:20px 0px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 400;
+    transition:opacity .4s;
 }
 
-.sign-in-footer 
+.sign-up-footer:hover, .sign-in-footer:hover 
 {
-    color:white;
-    border:2px solid white;
-    background:rgba(255, 255, 255, 0.39);
-    border-radius:50px;
-    font-size:35px;
-    padding:8px 20px;
-    margin:20px 0px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 400;
-
+    opacity:0.7;
+    cursor: pointer;
+    transition:.4s;
 }
+
 
 h4 
 {
