--- a/style_mobile.css
+++ b/style_mobile.css
@@ -484,7 +484,8 @@ p4 a
 
 .wave-1 
 {
-    width:50%;
+    width:100vw;
+    max-width: 100vw;
     display:flex;
     align-items: flex-start;
     justify-content: flex-start;
