Without wave mobile

--- a/style_mobile.css
+++ b/style_mobile.css
@@ -484,13 +484,7 @@ p4 a
 
 .wave-1 
 {
-    width:50vw;
-    max-width: 50vw;
-    display:flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    margin:0;
-
+    display:none;
 }
 
 .wave-1 img 
