--- a/style_mobile.css
+++ b/style_mobile.css
@@ -472,6 +472,7 @@ p4
     letter-spacing: 1px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 300;
+    margin-bottom:50px;
 }
 
 p4 a 
@@ -588,6 +589,7 @@ h3
     font-weight: 100;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color:#080558;
+    margin-top:50px;
 
 }
 
