--- a/style_mobile.css
+++ b/style_mobile.css
@@ -527,6 +527,7 @@ h2
     color:rgba(255, 255, 255, 0.952);
     text-align: center;
     letter-spacing: 1px;
+    margin-top:50px;
 
 }
 
@@ -558,8 +559,9 @@ p5
     font-size:25px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 300;
-    margin:30px 0px;
+    margin:50px 0px;
     transition:opacity 0.4s;
+    
 }
 
 .text-about-us button:hover 
