--- a/Contact/style.css
+++ b/Contact/style.css
@@ -38,13 +38,13 @@ body
     background: linear-gradient(90deg, rgba(14,10,109,1) 0%, rgba(6,4,71,1) 100%);
     left:0;
     z-index:666;
-    bottom:0;
     display:flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
     transition:0.7s;
     transform:translateX(-450px);
+    padding-bottom:150px;
 }
 
 .hamburger-open 
@@ -204,6 +204,7 @@ nav
     width:fit-content;
     height:fit-content;
     right:120px;
+    
     
 }
 
