--- a/Register/style.css
+++ b/Register/style.css
@@ -364,7 +364,7 @@ p1 a
     border:none;
     border-radius:50px;
     padding:10px 50px;
-    margin:10px 25%;
+    margin:10px 40px;
     transition:opacity .4s;
 }
 
