--- a/Register/style.css
+++ b/Register/style.css
@@ -246,25 +246,25 @@ nav
 {
     width:100%;
     height:fit-content;
-    padding-bottom:110px;
+    padding-bottom:225px;
     position: relative;
     display:flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-top:50px;
+    margin-top:10px;
 }
 
 .container img 
 {
-    width:40vw;
-    height:40vw;
+    width:35vw;
+    height:35vw;
 }
 
 form 
 {
-    width: 440px;
-    height:600px;
+    width: 370px;
+    height:500px;
     border-radius:50px;
     background:white;
     display:flex;
@@ -273,12 +273,13 @@ form
     justify-content: flex-start;
     position: relative;
     margin:0px 70px;
+   
 }
 
 h1 
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:40px;
+    font-size:30px;
     color:rgba(0, 0, 0, 0.795);
     font-weight: 500;
     margin:20px 40px;
@@ -287,7 +288,7 @@ h1
 label 
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:18px;
+    font-size:15px;
     color:rgba(0, 0, 0, 0.637);
     font-weight: 500;
     margin:0px 40px;
@@ -297,20 +298,20 @@ label
 {
     border:none;
     background:transparent;
-    font-size:16px;
+    font-size:14px;
     color:rgba(0, 0, 0, 0.781);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 400;
-    padding:5px 10px;
+    padding:3px 10px;
     margin:0px 40px;
-    width:300px;
+    width:280px;
     border-radius:50px;
 
 }
 
 .underline
 {
-    width:320px;
+    width:300px;
     height:3px;
     background: rgb(228,45,89);
     background: linear-gradient(90deg, rgba(228,45,89,1) 0%, rgba(55,63,177,1) 100%); 
@@ -355,7 +356,7 @@ p1 a
 #submit
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:35px;
+    font-size:20px;
     color:rgb(255, 255, 255);
     font-weight: 500;
     text-align: center;
@@ -363,8 +364,8 @@ p1 a
     background: linear-gradient(90deg, rgba(228,45,89,1) 0%, rgba(55,63,177,1) 100%); 
     border:none;
     border-radius:50px;
-    padding:10px 50px;
-    margin:10px 40px;
+    padding:10px 15px;
+    margin:20px 25%;
     transition:opacity .4s;
 }
 
@@ -378,7 +379,7 @@ p1 a
 .have-account
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:19px;
+    font-size:15px;
     color:rgb(255, 255, 255);
     font-weight: 500;
     margin:0px 10px;
