--- a/style.css
+++ b/style.css
@@ -70,8 +70,8 @@ body
 
 .profile img 
 {
-    width:40px;
-    height:40px;
+    width:30px;
+    height:30px;
     border:1px solid white;
     border-radius:100%;
     padding:10px;
@@ -80,7 +80,7 @@ body
 
 .nickname 
 {
-    font-size:25px;
+    font-size:21px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
     color:rgba(255, 255, 255, 0.705);
@@ -89,7 +89,7 @@ body
 
 .hamburger-link 
 {
-    font-size:25px;
+    font-size:18px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
     color:rgba(255, 255, 255, 0.705);
@@ -107,9 +107,9 @@ body
 }
 .ham-link-img 
 {
-    width:50px;
-    height:50px;
-    margin:40px 20px;
+    width:30px;
+    height:30px;
+    margin:20px 20px;
 }
 
 
@@ -150,8 +150,8 @@ header
 
 .first-span, .second-span, .third-span
 {
-    width:60px;
-    height:3px;
+    width:35px;
+    height:2px;
     background:rgb(255, 255, 255);
     border-radius:20px;
     position:absolute;
@@ -159,7 +159,7 @@ header
 
 .first-span 
 {
-    transform:translateY(-20px);
+    transform:translateY(-12px);
     transition:0.7s;
 }
 
@@ -172,7 +172,7 @@ header
 
 .third-span 
 {
-    transform:translateY(20px);
+    transform:translateY(12px);
     transition:0.7s;
 }
 
@@ -207,7 +207,7 @@ nav
 .nav-link 
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:20px;
+    font-size:18px;
     color:white;
     font-weight: 500;
     text-decoration: none;
@@ -282,7 +282,7 @@ nav
 
 h1 
 {
-    font-size:75px;
+    font-size:65px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
     color:rgba(255, 255, 255, 0.705);
@@ -294,7 +294,7 @@ h1
 
 p1
 {
-    font-size:35px;
+    font-size:25px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
     color:rgba(255, 255, 255, 0.705);
@@ -305,15 +305,15 @@ p1
 
 .start 
 {
-    width:290px;
-    height:90px;
+    width:190px;
+    height:60px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     position:relative;
     display:flex;
     align-items: center;
     justify-content: center;
     color:rgba(255, 255, 255, 0.747);
-    font-size: 35px;
+    font-size: 25px;
     font-size:400;
     border:none;
     border-radius:50px;
@@ -377,7 +377,7 @@ transition:opacity 0.4s;
 p2, p3 
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:70px;
+    font-size:40px;
     color:rgba(0, 0, 0, 0.795);
     font-weight: 500;
     margin:0px 20px;
@@ -386,7 +386,7 @@ p2, p3
 .crypto 
 {
     width:270px;
-    height:60px;
+    height:55px;
     border:1px solid rgba(0, 0, 0, 0.349);
     border-radius:50px;
     position:relative;
@@ -408,7 +408,7 @@ p2, p3
 .crypto p 
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:25px;
+    font-size:22px;
     color:rgba(0, 0, 0, 0.795);
     font-weight: 200;
 }
@@ -440,12 +440,12 @@ p2, p3
 
 .value 
 {
-    width:470px;
+    width:370px;
     height:50px;
     border:1px solid rgba(0, 0, 0, 0.493);
     border-radius:50px;
     padding:0px 50px;
-    font-size:30px;
+    font-size:22px;
     color:black;
     font-weight: 200;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -456,11 +456,11 @@ p2, p3
 {
     background: rgb(143,18,101);
     background: linear-gradient(90deg, rgba(143,18,101,1) 0%, rgba(41,37,155,1) 100%); 
-    width:300px;
+    width:250px;
     height:60px;
     border-radius:50px;
     color:white;
-    font-size:30px;
+    font-size:25px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 400;
     display:flex;
@@ -473,12 +473,12 @@ p2, p3
 {
     background: rgb(143,18,101);
     background: linear-gradient(90deg, rgba(143,18,101,1) 0%, rgba(41,37,155,1) 100%); 
-    width:250px;
+    width:220px;
     height:60px;
     border:none;
     border-radius:50px;
     color:white;
-    font-size:30px;
+    font-size:25px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 400;
     display:flex;
@@ -562,7 +562,7 @@ p4 a
 
 h2
 {
-    font-size:50px;
+    font-size:35px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 100;
     color:rgba(255, 255, 255, 0.952);
@@ -573,7 +573,7 @@ h2
 
 p5
 {
-    font-size:35px;
+    font-size:25px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 100;
     color:rgba(255, 255, 255, 0.788);
@@ -591,13 +591,13 @@ p5
 
 .text-about-us button 
 {
-    width:300px;
+
     padding:7px 30px;
     color:white;
     background:transparent;
     border:2px solid white;
     border-radius:50px;
-    font-size:35px;
+    font-size:25px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 300;
     margin-top:80px;
@@ -627,7 +627,7 @@ p5
 
 h3 
 {
-    font-size:70px;
+    font-size:50px;
     font-weight: 100;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-left:100px;
@@ -684,7 +684,7 @@ p6
 {
     
   
-    font-size:25px;
+    font-size:20px;
     color:white;
     background:rgba(255, 255, 255, 0.493);
     border:none;
@@ -753,13 +753,13 @@ p6
 
 p7 
 {
-    font-size:30px;
+    font-size:25px;
     font-weight: 300;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     width:100%;
     line-height: 32px;
     margin-top:20px;
-    text-align: left;
+    text-align: center;
 }
 
 
@@ -797,7 +797,7 @@ padding:50px 0;
     border:2px solid white;
     background:rgba(255, 255, 255, 0.39);
     border-radius:50px;
-    font-size:35px;
+    font-size:25px;
     padding:8px 30px;
     margin:20px 0px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -817,7 +817,7 @@ h4
 {
     color:white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:40px;
+    font-size:30px;
     font-weight: 400;
     margin:20px 0px;
 }
@@ -841,7 +841,7 @@ h5
 {
     color:rgba(255, 255, 255, 0.603);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:40px;
+    font-size:30px;
     font-weight: 400;
     margin:5px 0px;
 }
@@ -850,7 +850,7 @@ h5
 {
     color:rgba(255, 255, 255, 0.774);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:30px;
+    font-size:23px;
     font-weight: 400;
     text-decoration: none;
     margin:5px 0px;
