--- a/About Us/style_mobile.css
+++ b/About Us/style_mobile.css
@@ -199,528 +199,253 @@ nav
 
 
 
-.cryptoPrices
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.container 
 {
     width:100%;
-    height:40px;
-    background:rgba(255, 255, 255, 0.11);
-    margin-top:20px;
+    height:fit-content; 
     position:relative;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+
+}   
+
+.info 
+{
+    width:100%;
+    height:fit-content;
+    position:relative;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.main-pic 
+{
+    width:50vw;
+    height:50vw;
+}
+
+.info span 
+{
+    width:100%;
+    margin:0;
+    height:fit-content;
     display:flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    
+    position:relative;
+    margin:30px 0px;
 }
 
-.landing-description-container
+.icon
+{
+    width:50px;
+    height:50px;
+    opacity:0.7;
+}
+
+.icon-big 
+{
+    width:30px;
+    height: 30px;
+    opacity:0.7;
+    margin:0px 10px;
+}
+p1 
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size:18px;
+    color:rgba(255, 255, 255, 0.712);
+    font-weight: 500;
+ 
+}
+
+.read-more
 {
 
+    display:none;
+}
+
+
+
+.description
+{
     width:100%;
-    height: fit-content;
+    height:fit-content;
+    background-color: white;
     position:relative;
     display:flex;
     flex-direction: column-reverse;
     align-items: center;
     justify-content:center;
-    
+    padding:30px 0px;
 }
 
-.landing-description-container img 
+
+
+
+.description img 
 {
-    width:300px;
-    height:300px;
+    width:50vw;
+    height:50vw;
 }
 
-.landing-text 
+.description-holder
 {
-    width:100%;
-    height:fit-content;
-    position:relative;
+    width: 100%;
     display:flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-h1 
-{
-    font-size:35px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 500;
-    color:rgba(255, 255, 255, 0.705);
-    text-align: center;
-    letter-spacing: 1px;
-    width: 100%;
-    margin:20px 0px;
     
 }
 
-p1
-{
-    font-size:18px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 500;
-    color:rgba(255, 255, 255, 0.705);
-    text-align: center;
-    letter-spacing: 1px;
-    width:100%;
 
-}
-
-.start 
+h1 
 {
-    width:200px;
-    height:60px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    position:relative;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    color:rgba(255, 255, 255, 0.747);
-    font-size: 25px;
-    font-size:400;
-    border:none;
-    border-radius:50px;
-    background: rgb(74,21,181);
-background: linear-gradient(135deg, rgba(74,21,181,1) 0%, rgba(159,18,18,1) 100%);
-margin:30px 0px;
-transition:opacity 0.4s;
-
+    font-size:30px;
+    font-weight: 500;
+    color:black;
+    margin-bottom:10px;
+    text-align: center;
+    letter-spacing: 2px;
 }
 
-.start:hover 
+
+p2
 {
-    opacity:0.7;
-    transition:0.4s;
-    cursor: pointer;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size:16px;
+    font-weight: 300;
+    color:black;
+    width:90%;
+    letter-spacing: 1px;
+    text-align: center;
+    margin:20px 0px;
 }
 
+h2 
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size:30px;
+    font-weight: 500;
+    color:white;
+    margin-bottom:10px;
+    text-align: center;
+    letter-spacing: 2px;
+}
 
+p3
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size:15px;
+    font-weight: 300;
+    color:rgb(255, 255, 255);
+    width:90%;
+    letter-spacing: 1px;
+    text-align: center;
 
-
-
-.small-market-container 
+}
+.description-bottom
 {
     width:100%;
     height:fit-content;
-    background:white;
+    background: rgb(14,10,109);
+    background: linear-gradient(135deg, rgba(14,10,109,1) 0%, rgba(37,33,122,1) 47%, rgba(99,0,46,1) 100%); 
     position:relative;
     display:flex;
     flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
-}
-
-
-.about-img
-{
-    display:none;
-}
-
-.market-container
-{
-    width:100%;
-    position:relative;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.btc-holder
-{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    padding:150px 0px;
 
 }
 
-p2, p3 
+.description-bottom .about-img-bottom
 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:40px;
-    color:rgba(0, 0, 0, 0.795);
-    font-weight: 500;
-    margin:20px 0px;
-}
-
-.crypto 
-{
-    width:70vw;
-    height:40px;
-    border:1px solid rgba(0, 0, 0, 0.349);
-    border-radius:50px;
-    position:relative;
-    display:flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-
-
-.crypto .currency
-{
-    width:40px;
-    height:40px;
-    position:absolute;
-    left:25px;
-}
-
-.crypto p 
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:25px;
-    color:rgba(0, 0, 0, 0.795);
-    font-weight: 200;
-}
-
-.crypto .roll-down 
-{
-    width:30px;
-    height:30px;
-    position: absolute;
-    right: 25px;
-    transition:opacity 0.3s;
-}
-
-.crypto .roll-down:hover 
-{
-    cursor: pointer;
-    animation:roll-down-animation 0.6s ease-in-out infinite;
-    opacity:0.3s;
-
-    
-}
-
-@keyframes roll-down-animation 
-{
-    0%{transform:translateY(0px);}
-    50%{transform:translateY(5px);}
-    100%{transform:translateY(0px);}
-}
-
-.value 
-{
-    width:70vw;
-    height:50px;
-    border:1px solid rgba(0, 0, 0, 0.493);
-    border-radius:50px;
-    padding:0px 15px;
-    font-size:20px;
-    color:black;
-    font-weight: 200;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top:25px;
-}
-
-.price-holder 
-{
-    background: rgb(143,18,101);
-    background: linear-gradient(90deg, rgba(143,18,101,1) 0%, rgba(41,37,155,1) 100%); 
-    width:70vw;
-    height:50px;
-    border-radius:50px;
-    color:white;
-    font-size:20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 400;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    margin:20px 0px;
-}
-
-.continue 
-{
-    background: rgb(143,18,101);
-    background: linear-gradient(90deg, rgba(143,18,101,1) 0%, rgba(41,37,155,1) 100%); 
     width:50vw;
-    height:40px;
-    border:none;
-    border-radius:50px;
-    color:white;
-    font-size:20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 400;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    margin:30px 0px;
-    transition:0.4s;
-    -webkit-box-shadow: 0px 7px 5px 0px rgba(50, 50, 50, 0.75);
--moz-box-shadow:    0px 7px 5px 0px rgba(50, 50, 50, 0.75);
-box-shadow:         0px 7px 5px 0px rgba(50, 50, 50, 0.75);
-}
-
-.continue:hover 
-{
-    opacity:0.9;
-    transition:0.4s;
-    cursor: pointer;
-    transform:translateY(-8px);
-    -webkit-box-shadow: 0px 15px 5px 0px rgba(50, 50, 50, 0.75);
--moz-box-shadow:    0px 15px 5px 0px rgba(50, 50, 50, 0.75);
-box-shadow:         0px 15px 5px 0px rgba(50, 50, 50, 0.75);
-}
-
-p4 
-{
-    font-size:15px;
-    color:black;
-    letter-spacing: 1px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 300;
-    margin-bottom:50px;
-}
-
-p4 a 
-{
-    color:black;
-
-}
-
-
-
-.wave-1 
-{
-    display:none;
-}
-
-.wave-1 img 
-{
-    margin:0;
-}
-
-.about-us 
-{
-    width:100%;
-    height:fit-content;
-    position:relative;
-    display:flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    background: rgb(14,10,109);
-    background: linear-gradient(180deg, rgba(14,10,109,1) 0%, rgba(99,0,46,1) 100%); 
-}
-
-.text-about-us 
-{
-    width:100%;
-
-    position:relative;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-
-}
-
-h2
-{
-    font-size:25px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 100;
-    color:rgba(255, 255, 255, 0.952);
-    text-align: center;
-    letter-spacing: 1px;
-    margin-top:50px;
-
-}
-
-p5
-{
-    font-size:16px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 100;
-    color:rgba(255, 255, 255, 0.788);
-    text-align: center;
-    letter-spacing: 1px;
-    margin-top:30px;
-
-}
-
-.about-us img 
-{
-   display:none;
-}
-
-.text-about-us button 
-{
-    width:60vw;
-    padding:7px 10px;
-    color:white;
-    background:transparent;
-    border:2px solid white;
-    border-radius:50px;
-    font-size:25px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 300;
-    margin:50px 0px;
-    transition:opacity 0.4s;
-    
-}
-
-.text-about-us button:hover 
-{
-    opacity:0.7;
-    transition:0.4s;
-    cursor: pointer;
-}
-
-
-.help 
-{
-    width:100%;
-    height:fit-content;
-    background:white;
-    position:relative;
-    display:flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-
-}
-
-h3 
-{
-    font-size:30px;
-    font-weight: 100;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color:#080558;
-    margin-top:50px;
-
-}
-
-.card-container 
-{
-    width:100%;
-    height:fit-content;
-    margin-top:30px;
-    position: relative;
-    display:flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-}
-
-
-.card 
-{
-
-    background: rgb(133,97,218);
-    background: linear-gradient(180deg, rgba(133,97,218,1) 0%, rgba(205,63,63,1) 100%); 
-    width:70vw;
-    height:fit-content;
-    margin:30px 0px;
-    border-radius:30px;
-    position: relative;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding:30px 0px;
-    -webkit-box-shadow: 0px 8px 5px 0px rgba(50, 50, 50, 0.75);
--moz-box-shadow:    0px 8px 5px 0px rgba(50, 50, 50, 0.75);
-box-shadow:         0px 8px 5px 0px rgba(50, 50, 50, 0.75);
-}
-
-p6 
-{
-    font-size:17px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 500;
-    text-align:center;
-    letter-spacing: 1px;
-    color:white;
-    width:60%;
-}
-
-.card button 
-{
-    
-  
-    font-size:25px;
-    color:white;
-    background:rgba(255, 255, 255, 0.493);
-    border:none;
-    border-radius:50px;
-    padding:10px 20px;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    margin-top:40px;
-    transition:opacity 0.4s;
-}
-
-.card button:hover 
-{
-    opacity:0.7;
-    cursor: pointer;
-    transition:0.4s;
-}
-
-.description-container 
-{
-    width:100%;
-    height:fit-content;
-    position:relative;
-    display:flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-
-}
-
-.description 
-{
-    width:fit-content;
-    height:fit-content;
-    margin:30px 80px;
-    position:relative;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    
-}
-
-#time 
-{
-    width:90px;
-    height:90px;
-    opacity:0.7;
-}
-
-#curr 
-{
-    width:90px;
-    height:90px;
-    opacity:0.7;
-}
-
-#btc-worek
-{
-    width:70px;
-    height:70px;
-    opacity:0.7;
-}
-
-p7 
-{
-    font-size:25px;
-    font-weight: 300;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    width:100%;
-    line-height: 30px;
+    height:45vw;
     margin-top:20px;
-    text-align: center;
 }
+
+
+.wave 
+{
+    position:absolute;
+    top:0;
+}
+
+
+.wave-bottom 
+{
+    bottom:0;
+    position:absolute;
+}
+
+
+.trusted-us
+{
+    width:100%;
+    position:relative;
+    background:white;
+    height:100vh;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 footer 
